--- a/CSS/SkillsPage.css
+++ b/CSS/SkillsPage.css
@@ -2,7 +2,7 @@
 }
 
 .Main h1{
-    background-color: #161E26;
+    background-color: #CEA2F8;
     margin-top: -10px;
     margin-left: -20px;
     margin-right: -20px;
@@ -14,29 +14,43 @@ h2{
 
 .Languages{
     display: flex;
-    background-color: #161E26;
+    align-items: center;
+    justify-content: center;
+    background-color: #CEA2F8;
+    border-radius: 25px;
 }
 
 .Languages section{
     padding-right: 50px;
     padding-left: 20px;
-    max-width: 30%;
+    max-width: 25%;
+    align-items: center;
 }
 
 .Languages section h3{
     text-align: center;
 }
-
+.Languages section img{
+    width: 300px;
+    height: auto;
+}
 
 .Engines{
     display: flex;
     margin-left: 0px;
-    background-color: #161E26;
+    background-color: #CEA2F8;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
 }
 
 .Engines section{
     padding-right: 50px;
     padding-left: 20px;
+}
+
+.Engines section img{
+    max-width: 300px;
 }
 
 .Engines section h3{
